# Fidenz-AI-Co-scientist

./: .gitignore  ARCHITECTURE.md  AS-ALD_CoScientist_Project.pptx  Dockerfile  Makefile  README.md  app.py  environment.yml  pyproject.toml
artifacts/demo/: asald_results.json  citation_repository.json  confidence_scores.json  hypothesis_state_graphs.json  knowledge_graph.graphml  knowledge_graph.json  knowledge_graph_metadata.json  layer1_output.json  layer3_output.json  official_hypothesis.json  research_provenance.json  surface_fidelity.json  validation_plan.json  validation_provenance.json  validation_results.json
artifacts/demo/simulation_logs/: surface_reactivity_iter0.json
diagrams/: architecture.drawio
docs/: UTILIZED_SOFTWARE.md
src/aicoscientist/: asald.py  cli_paper.py  cli_validate.py  config.py  layer3_graph.py  models.py
src/aicoscientist/agents/: experiment_planner.py  hypothesis_agent.py  inhibitor_proposer.py  recommender.py
src/aicoscientist/layer4_paper/: compiler.py  figures.py  sections.py  stitcher.py  swarm.py  template.tex
src/aicoscientist/surfaces/: amorphous_builder.py  descriptors.py  fidelity_gate.py  hydroxylation.py
src/aicoscientist/validation/: designer.py  mlip.py  reflection.py  runner.py  screening.py  summarizer.py  surface_reactivity.py
