[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coscientist"
version = "0.2.0"
description = "AI Co-Scientist for area-selective ALD (AS-ALD): literature-grounded research, human-gated hypotheses, in-silico surface-reactivity validation, and an autonomous LaTeX manuscript."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "networkx>=3.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2.0"]
anthropic = ["langchain-anthropic>=0.2.0"]
# Google Gemini via AI Studio API keys (LLM_PROVIDER=google_genai)
google-genai = ["langchain-google-genai>=2.0.0"]
# Google Gemini via Vertex AI / service account (LLM_PROVIDER=google_vertexai)
google-vertexai = ["langchain-google-vertexai>=2.0.0"]
# Tier-1 foundation-MLIP surface reactivity (Colab CUDA or CPU). MACE energy
# differences require float64, unsupported on Apple MPS -> run this tier on CPU/CUDA.
# torch is imported directly for CUDA detection (config.py) and is MACE's backend;
# torch-dftd supplies the optional D3 dispersion path; chgnet is an alternative
# universal MLIP calculator (make_calculator(kind="chgnet")).
mlip = [
    "ase>=3.23",
    "mace-torch>=0.3.6",
    "torch>=2.1",
    "torch-dftd>=0.4.0",
    "chgnet>=0.3.0",
]
# Realistic structures: rdkit builds real 3D molecules from SMILES; pymatgen
# generates crystalline-derived slabs (alpha-quartz SiO2, beta-Si3N4).
structures = ["rdkit>=2024.03.1", "pymatgen>=2024.0.0"]
# Tier-2 semi-empirical spot-checks for calibration.
xtb = ["tblite>=0.3.0"]

[project.scripts]
aicoscientist = "aicoscientist.cli:main"
aicoscientist-validate = "aicoscientist.cli_validate:main"
aicoscientist-paper = "aicoscientist.cli_paper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aicoscientist = ["layer4_paper/*.tex"]
